--- a/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
+++ b/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
@@ -8,9 +8,7 @@
 					@if ({ value: request$ | async }; as request) {
 						@if (!request.value) {
 							<div class="kaizen__slogan">
-								<span class="kaizen__slogan-title">
-									Unlock the power of AI with Kaizen.
-								</span>
+								<span class="kaizen__slogan-title"> Unlock the power of AI with Kaizen. </span>
 								<span class="kaizen__slogan-subtitle">
 									Your questions answered, your tasks automated.
 								</span>
