--- a/frontend/src/app/integrations/pages/integrations-list/integrations-list.component.html
+++ b/frontend/src/app/integrations/pages/integrations-list/integrations-list.component.html
@@ -2,48 +2,49 @@
 
 <section class="page">
 	<div class="integrations">
-		@for (integration of integrations; track $index) {
-			<div class="integrations__item">
+		@for (integration of integrations$ | async; track integration.id) {
+			<div
+				class="integrations__item"
+				[class.enabled]="integration.connected"
+			>
 				<div class="integrations__item-header">
-					<img
-						src="assets/images/integrations/{{ integration.icon }}.svg"
-						[alt]="integration.name"
-						class="integrations__item-icon"
-					/>
+					<div class="integrations__item-header-left">
+						<img
+							src="assets/images/integrations/{{ integration.icon }}.svg"
+							[alt]="integration.name"
+							class="integrations__item-icon"
+						/>
+
+						@if (integration.connected) {
+							<span class="integrations__item-enabled-tag">Enabled</span>
+						}
+					</div>
+
 					@if (!integration.connected) {
-						<button class="integrations__item-connect">Connect</button>
+						<button
+							class="integrations__item-connect"
+							(click)="integration.onConnect()"
+						>
+							Connect
+						</button>
 					} @else {
-						<button class="integrations__item-connect-active">Connected</button>
+						<button
+							class="integrations__item-disconnect"
+							(click)="integration.onDisconnect()"
+						>
+							Disconnect
+						</button>
 					}
 				</div>
 
-				<h4 class="integrations__item-title">{{ integration.name }}</h4>
+				<h4 class="integrations__item-title">
+					{{ integration.name }}
+				</h4>
+
 				<p class="integrations__item-description">
 					{{ integration.description }}
 				</p>
 			</div>
 		}
-
-		<div class="integrations__item">
-			<div class="integrations__item-header">
-				<img
-					src="assets/images/integrations/spotify.svg"
-					alt="Spotify"
-					class="integrations__item-icon"
-				/>
-				<button
-					class="integrations__item-connect"
-					(click)="onSpotifyClick()"
-				>
-					Connect
-				</button>
-			</div>
-
-			<h4 class="integrations__item-title">Spotify</h4>
-			<p class="integrations__item-description">
-				Digital music, podcast, and video service that gives you access to
-				millions of songs and other content from creators all over the world
-			</p>
-		</div>
 	</div>
 </section>
