--- a/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
@@ -8,6 +8,7 @@
 	font-family: $primary-ff, sans-serif;
 	font-size: $text-sm;
 	color: $text-black;
+	line-height: 24px;
 	background: #fff;
 	position: relative;
 }
