--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -33,20 +33,20 @@ $text-white: #f4f5f5;
 $text-black: #242424;
 
 $kaiteki-primary-palette: (
-	50: #85baa4,
-	100: #6cac92,
-	200: #549e80,
-	300: #3b916d,
-	400: #23835b,
-	500: #0a7549,
-	600: #096942,
-	700: #085e3a,
-	800: #075233,
-	900: #06462c,
-	A100: #0a7549,
-	A200: #0a7549,
-	A400: #0a7549,
-	A700: #0a7549,
+	50: #82c6a1,
+	100: #69bb8e,
+	200: #50af7c,
+	300: #37a469,
+	400: #1e9956,
+	500: #068e44,
+	600: #057f3d,
+	700: #047136,
+	800: #04632f,
+	900: #035528,
+	A100: #068e44,
+	A200: #068e44,
+	A400: #068e44,
+	A700: #068e44,
 	contrast: (
 		50: $text-white,
 		100: $text-white,
