--- a/frontend/src/app/teams/submodules/settings/components/sections/settings-logo-section/settings-logo-section.component.html
+++ b/frontend/src/app/teams/submodules/settings/components/sections/settings-logo-section/settings-logo-section.component.html
@@ -25,7 +25,7 @@
 		/>
 	</div> -->
 
-	//TODO: ADD PREVIEW OF LOGO AND MAKE IT ROUND ADJUSTABLE
+	<!-- TODO: ADD PREVIEW OF LOGO AND MAKE IT ROUND ADJUSTABLE -->
 
 	<form
 		[formGroup]="form"
