--- a/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.html
+++ b/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.html
@@ -17,30 +17,7 @@
 
 		<div class="settings__separator"></div>
 
-		<div class="settings__section">
-			<div class="settings__section-header">
-				<div class="settings__section-description">
-					<div class="settings__section-title">Performance Metrics</div>
-					<div class="settings__section-subtitle">
-						Adjust settings of your team members performance evaluation
-					</div>
-				</div>
-
-				<div class="settings__section-toolbar">
-					<button
-						mat-stroked-button
-						type="submit"
-						color="primary"
-					>
-						Save
-					</button>
-				</div>
-			</div>
-
-			<div class="settings__section-content settings__performance">
-				<app-performance-metrics></app-performance-metrics>
-			</div>
-		</div>
+		<app-settings-performance-section></app-settings-performance-section>
 
 		<div class="settings__separator"></div>
 
