--- a/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.scss
+++ b/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.scss
@@ -74,12 +74,14 @@
 				font-size: 12px;
 				color: #7c7f85;
 				font-weight: 400;
+				line-height: 1.5;
 			}
 
 			&-header {
 				display: flex;
 				align-items: center;
 				justify-content: space-between;
+				gap: 22px;
 			}
 
 			&-description {
