feature: delete tokens, delete team

--- a/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.html
+++ b/frontend/src/app/teams/submodules/settings/pages/settings/settings.component.html
@@ -21,16 +21,6 @@
 
 		<div class="settings__separator"></div>
 
-		<div class="settings__section settings__danger">
-			<div class="settings__section-left">
-				<div class="settings__section-title danger">Delete this team</div>
-				<div class="settings__section-subtitle">
-					Once you delete a team, there is no going back. Please be certain.
-				</div>
-			</div>
-			<div class="settings__section-right">
-				<button mat-stroked-button>Delete</button>
-			</div>
-		</div>
+		<app-settings-danger-section></app-settings-danger-section>
 	</div>
 </section>
