--- a/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.scss
+++ b/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.scss
@@ -1,22 +1,21 @@
 .files {
+	display: flex;
+	flex-direction: column;
 	height: 100%;
 
 	&__content {
+		flex: 1;
 		margin-top: 22px;
-		margin-bottom: 50px;
 	}
 
 	&__empty {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin-top: 50px;
-
-		& p {
-			font-size: 14px;
-			font-weight: 400;
-			color: #bdbdbd;
-			text-transform: capitalize;
-		}
+		height: 100%;
+		font-size: 14px;
+		font-weight: 400;
+		color: #bdbdbd;
+		text-transform: capitalize;
 	}
 }
