--- a/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/posts-list-view.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/posts-list-view.component.html
@@ -1,4 +1,4 @@
-<div class="posts-list">
+<div class="posts__list">
 	@for (post of posts; track post.id) {
 		<app-post-item [post]="post"></app-post-item>
 	}
