--- a/frontend/src/app/teams/components/layout/teams-layout.component.scss
+++ b/frontend/src/app/teams/components/layout/teams-layout.component.scss
@@ -16,7 +16,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	min-height: 100vh;
+	height: 100%;
 
 	&-content {
 		z-index: 10;
@@ -25,9 +25,9 @@
 		align-items: center;
 	}
 
-	&-h1 {
+	&-title {
 		color: #d8d7d7;
-		font-size: 380px;
+		font-size: 280px;
 		font-weight: 600;
 		position: absolute;
 		top: 50%;
@@ -35,32 +35,21 @@
 		transform: translate(-50%, -50%);
 		z-index: 5;
 		opacity: 0.25;
+
+		@media screen and (max-width: $md) {
+			font-size: 180px;
+		}
 	}
 
-	&-h2 {
+	&-subtitle {
 		color: #000;
-		font-size: 30px;
-		margin-bottom: 50px;
+		font-size: 26px;
+		margin-bottom: 26px;
 		text-align: center;
 		line-height: 1.4;
-	}
 
-	&-button {
-		display: inline-block;
-		padding: 15px 40px;
-		background-color: $primary;
-		color: #fff;
-		font-weight: 500;
-		text-decoration: none;
-		border-radius: 8px;
-		&:active,
-		&:focus {
-			background: darken($primary, 30%);
-			outline: none;
-		}
-		&:hover {
-			background: darken($primary, 10%);
-			transition: 250ms;
+		@media screen and (max-width: $md) {
+			font-size: 20px;
 		}
 	}
 }
