--- a/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.scss
+++ b/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.scss
@@ -1,5 +1,21 @@
 .meetings {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+
 	&__content {
+		flex: 1;
 		margin-top: 22px;
+	}
+
+	&__empty {
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 14px;
+		font-weight: 400;
+		color: #bdbdbd;
+		text-transform: capitalize;
 	}
 }
