--- a/frontend/src/app/teams/submodules/tasks/components/views/list-view/components/list-panel/list-panel.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/list-view/components/list-panel/list-panel.component.html
@@ -2,6 +2,7 @@
 	<mat-expansion-panel
 		(opened)="panelOpenState = true"
 		(closed)="panelOpenState = false"
+		expanded
 	>
 		<mat-expansion-panel-header>
 			<mat-panel-title>
@@ -12,6 +13,7 @@
 				{{ column.name }}
 			</mat-panel-title>
 		</mat-expansion-panel-header>
+
 		<div class="table_wrapper">
 			<table
 				mat-table
